  *) mod_proxy: Improve network performance by setting APR_TCP_NODELAY      (disable Nagle algorithm) on sockets if implemented.      PR 42871 [Christian BOITEL <christian_boitel yahoo.fr>, Jim Jagielski]

git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@562510 13f79535-47bb-0310-9956-ffa450edef68